--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,10 @@ body {
 	color: var(--foreground);
 	font-family: var(--font-karla);
 }
+.noselect {
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
