--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,11 @@
 	}
 } */
 
+.react-transform-wrapper, .react-transform-component {
+	width: 100% !important;
+	height: 100% !important;
+}
+
 body {
 	background: var(--background);
 	color: var(--foreground);
